Test takeNotPresent, sistemate dipendenze mockito